--- a/.github/workflows/streamlit.yml
+++ b/.github/workflows/streamlit.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         python-version: ["3.11"]
     steps: 
-      - uses: action/checkout@v4 
+      - uses: actions/checkout@v4 
       - name: Setup Python 
         uses: actions/setup-python@v3
         with: 
@@ -27,7 +27,7 @@ jobs:
     needs: 
       - build 
     steps:
-      - uses: action/checkout@v4 
+      - uses: actions/checkout@v4 
       
       - name: Pulling on the Server
         uses: easingthemes/ssh-deploy@main 
