--- a/.github/workflows/streamlit.yml
+++ b/.github/workflows/streamlit.yml
@@ -61,7 +61,7 @@ jobs:
            source venv/bin/activate 
            pip install --upgrade pip 
            pip install -r requirements.txt 
-           nohup streamlit run app.py --server.port 8501 > /dev/null 2>&1 & 
+           nohup streamlit run /home/ubuntu/web_app/app.py --server.port 8501 > /dev/null 2>&1 & 
     
         
       
